--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "extension-reloader",
+    "name": "advanced-extension-reloader",
     "description": "-",
     "version": "0.0.1",
     "author": "loftyshaky",
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/loftyshaky/extension-reloader.git"
+        "url": "https://github.com/loftyshaky/advanced-extension-reloader.git"
     },
     "scripts": {
         "dev": "webpack --watch --mode=development --env browser=chrome",
@@ -15,35 +15,35 @@
         "prode": "webpack --mode=production --env browser=edge"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.159",
-        "@types/node": "^14.6.0",
-        "@types/react": "^16.9.46",
-        "@types/react-dom": "^16.9.8",
-        "@typescript-eslint/eslint-plugin": "^3.9.1",
-        "@typescript-eslint/parser": "^3.9.1",
+        "@types/lodash": "^4.14.165",
+        "@types/node": "^14.14.12",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.9.1",
+        "@typescript-eslint/parser": "^4.9.1",
         "app-root-path": "^3.0.0",
         "babel-eslint": "^10.1.0",
-        "copy-webpack-plugin": "^6.3.2",
+        "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^5.0.1",
-        "eslint": "^7.7.0",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-import-resolver-typescript": "^2.2.1",
-        "eslint-plugin-import": "^2.22.0",
+        "eslint": "^7.15.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-import-resolver-typescript": "^2.3.0",
+        "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-json": "^2.1.2",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-react": "^7.20.6",
-        "eslint-plugin-react-hooks": "^4.1.0",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.2.0",
         "fs-extra": "^9.0.1",
-        "mini-css-extract-plugin": "^1.3.2",
+        "mini-css-extract-plugin": "^1.3.3",
         "recursive-readdir": "^2.2.2",
         "sass": "^1.30.0",
         "sass-loader": "^10.1.0",
-        "socket.io": "^2.3.0",
-        "stylelint": "^13.6.1",
+        "socket.io": "^3.0.4",
+        "stylelint": "^13.8.0",
         "stylelint-config-recommended": "^3.0.0",
         "stylelint-scss": "^3.18.0",
         "ts-loader": "^8.0.11",
-        "typescript": "^3.9.7",
+        "typescript": "^4.1.2",
         "webpack": "^5.10.0",
         "webpack-cli": "^4.2.0",
         "webpack-fix-style-only-entries": "^0.6.0"
@@ -51,12 +51,12 @@
     "dependencies": {
         "@loftyshaky/shared": "0.0.10",
         "lodash": "^4.17.20",
-        "mobx": "^5.15.6",
-        "mobx-react": "^6.2.5",
+        "mobx": "^6.0.4",
+        "mobx-react": "7.0.5",
         "normalize.css": "^8.0.1",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "socket.io-client": "^2.3.0",
-        "webextension-polyfill-ts": "^0.19.0"
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "socket.io-client": "^3.0.4",
+        "webextension-polyfill-ts": "^0.22.0"
     }
 }
