--- a/package.json
+++ b/package.json
@@ -12,51 +12,59 @@
         "dev": "webpack --watch --mode=development --env browser=chrome",
         "prod": "webpack --mode=production --env browser=chrome",
         "deve": "webpack --watch --mode=development --env browser=edge",
-        "prode": "webpack --mode=production --env browser=edge"
+        "prode": "webpack --mode=production --env browser=edge",
+        "format": "prettier --config .prettierrc.js webpack.config.js js/**/*.js src/**/*.ts src/scss/**/*.scss src/_locales/**/*.json src/html/**/*.html --write"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.165",
-        "@types/node": "^14.14.12",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
-        "@typescript-eslint/eslint-plugin": "^4.9.1",
-        "@typescript-eslint/parser": "^4.9.1",
+        "@types/chrome": "0.0.149",
+        "@types/lodash": "^4.14.171",
+        "@types/node": "^16.4.10",
+        "@types/react": "^17.0.15",
+        "@types/react-dom": "^17.0.9",
+        "@typescript-eslint/eslint-plugin": "^4.28.5",
+        "@typescript-eslint/parser": "^4.28.5",
         "app-root-path": "^3.0.0",
         "babel-eslint": "^10.1.0",
-        "copy-webpack-plugin": "^7.0.0",
-        "css-loader": "^5.0.1",
-        "eslint": "^7.15.0",
+        "copy-webpack-plugin": "^9.0.1",
+        "css-loader": "^6.2.0",
+        "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
-        "eslint-import-resolver-typescript": "^2.3.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-json": "^2.1.2",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-import-resolver-typescript": "^2.4.0",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-json": "^3.0.0",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "fs-extra": "^9.0.1",
-        "mini-css-extract-plugin": "^1.3.3",
-        "sass": "^1.30.0",
-        "sass-loader": "^10.1.0",
-        "socket.io": "^3.0.4",
-        "stylelint": "^13.8.0",
-        "stylelint-config-recommended": "^3.0.0",
-        "stylelint-scss": "^3.18.0",
-        "ts-loader": "^8.0.11",
-        "typescript": "^4.1.2",
-        "webpack": "^5.10.0",
-        "webpack-cli": "^4.2.0",
-        "webpack-fix-style-only-entries": "^0.6.0"
+        "fs-extra": "^10.0.0",
+        "mini-css-extract-plugin": "^2.1.0",
+        "optimize-css-assets-webpack-plugin": "^6.0.1",
+        "prettier": "^2.3.2",
+        "sass": "^1.37.0",
+        "sass-loader": "^12.1.0",
+        "socket.io": "^4.1.3",
+        "stylelint": "^13.13.1",
+        "stylelint-config-recommended": "^5.0.0",
+        "stylelint-config-sass-guidelines": "^8.0.0",
+        "stylelint-config-standard": "^22.0.0",
+        "ts-loader": "^9.2.4",
+        "typescript": "^4.3.5",
+        "web-ext-types": "^3.2.1",
+        "webpack": "^5.47.1",
+        "webpack-cli": "^4.7.2",
+        "webpack-fix-style-only-entries": "^0.6.1"
     },
     "dependencies": {
-        "@loftyshaky/shared": "0.0.10",
-        "@simonwep/pickr": "^1.8.0",
-        "lodash": "^4.17.20",
-        "mobx": "^6.0.4",
-        "mobx-react": "7.0.5",
+        "@loftyshaky/shared": "0.0.26",
+        "@simonwep/pickr": "^1.8.1",
+        "lodash": "^4.17.21",
+        "mobx": "^6.3.2",
+        "mobx-react": "7.2.0",
         "normalize.css": "^8.0.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "socket.io-client": "^3.0.4",
-        "webextension-polyfill-ts": "^0.22.0"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "socket.io-client": "^4.1.3",
+        "webextension-polyfill-ts": "^0.26.0"
     }
 }
