--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "dependencies": {
         "@loftyshaky/shared": "0.0.36",
         "@simonwep/pickr": "^1.8.1",
+        "confusing-browser-globals": "^1.0.11",
         "lodash": "^4.17.21",
         "mobx": "^6.3.2",
         "mobx-react": "7.2.0",
