--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/node": "^17.0.18",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
+        "@types/socket.io-client": "^3.0.0",
         "@typescript-eslint/eslint-plugin": "^5.12.0",
         "@typescript-eslint/parser": "^5.12.0",
         "app-root-path": "^3.0.0",
