--- a/package.json
+++ b/package.json
@@ -12,55 +12,56 @@
         "lint": "npx eslint . --fix"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.17.0",
-        "@types/chrome": "0.0.178",
-        "@types/lodash": "^4.14.178",
-        "@types/node": "^17.0.18",
-        "@types/react": "^17.0.39",
-        "@types/react-dom": "^17.0.11",
+        "@babel/eslint-parser": "^7.18.2",
+        "@types/chrome": "0.0.193",
+        "@types/lodash": "^4.14.182",
+        "@types/node": "^18.0.3",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
         "@types/socket.io-client": "^3.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.12.0",
-        "@typescript-eslint/parser": "^5.12.0",
+        "@typescript-eslint/eslint-plugin": "^5.30.5",
+        "@typescript-eslint/parser": "^5.30.5",
         "app-root-path": "^3.0.0",
-        "copy-webpack-plugin": "^10.2.4",
-        "css-loader": "^6.6.0",
-        "css-minimizer-webpack-plugin": "^3.4.1",
-        "eslint": "^8.9.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^4.0.0",
+        "eslint": "^8.19.0",
         "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-import-resolver-typescript": "^2.5.0",
-        "eslint-plugin-import": "^2.25.4",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^3.2.5",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-json": "^3.1.0",
-        "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.28.0",
-        "eslint-plugin-react-hooks": "^4.3.0",
-        "fs-extra": "^10.0.0",
-        "mini-css-extract-plugin": "^2.5.3",
-        "prettier": "^2.5.1",
-        "sass": "^1.49.8",
-        "sass-loader": "^12.6.0",
-        "stylelint": "^14.5.1",
-        "stylelint-config-recommended": "^7.0.0",
+        "eslint-plugin-jsx-a11y": "^6.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "fs-extra": "^10.1.0",
+        "mini-css-extract-plugin": "^2.6.1",
+        "prettier": "^2.7.1",
+        "sass": "^1.53.0",
+        "sass-loader": "^13.0.2",
+        "stylelint": "^14.9.1",
+        "stylelint-config-recommended": "^8.0.0",
         "stylelint-config-sass-guidelines": "^9.0.1",
-        "stylelint-config-standard": "^25.0.0",
-        "ts-loader": "^9.2.6",
-        "typescript": "^4.5.5",
+        "stylelint-config-standard": "^26.0.0",
+        "terser-webpack-plugin": "^5.3.3",
+        "ts-loader": "^9.3.1",
+        "typescript": "^4.7.4",
         "web-ext-types": "^3.2.1",
-        "webpack": "^5.69.1",
-        "webpack-cli": "^4.9.2"
+        "webpack": "^5.73.0",
+        "webpack-cli": "^4.10.0"
     },
     "dependencies": {
-        "@loftyshaky/shared": "0.0.40",
+        "@loftyshaky/shared": "0.0.42",
         "@simonwep/pickr": "^1.8.2",
         "confusing-browser-globals": "^1.0.11",
         "lodash": "^4.17.21",
-        "mobx": "^6.4.0",
-        "mobx-react": "7.3.0",
+        "mobx": "^6.6.1",
+        "mobx-react": "7.5.2",
         "normalize.css": "^8.0.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "socket.io-client": "^4.4.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "socket.io-client": "^4.5.1",
         "webextension-polyfill-ts": "^0.26.0"
     }
 }
