--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "typescript": "^4.7.4",
         "web-ext-types": "^3.2.1",
         "webpack": "^5.73.0",
-        "webpack-cli": "^4.10.0"
+        "webpack-cli": "^4.10.0",
+        "webpack-license-plugin": "^4.4.2"
     },
     "dependencies": {
         "@loftyshaky/shared": "1.5.0",
