--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "dependencies": {
         "@loftyshaky/shared": "1.5.0",
         "@simonwep/pickr": "^1.8.2",
+        "advanced-extension-reloader-watch-2": "^1.3.1",
         "confusing-browser-globals": "^1.0.11",
         "lodash": "^4.17.21",
         "mobx": "^6.6.1",
