--- a/package.json
+++ b/package.json
@@ -8,62 +8,58 @@
         "deve": "webpack --watch --mode=development --env test --env browser=edge",
         "prode": "webpack --mode=production --env browser=edge",
         "prodteste": "webpack --mode=production --env test --env browser=edge",
-        "format": "prettier --config .prettierrc.js webpack.config.js js/**/*.js src/**/*.ts src/scss/**/*.scss src/_locales/**/*.json src/html/**/*.html --write",
-        "lint": "npx eslint **/*.js **/*.ts --fix & npx stylelint src/scss/**/*.scss --fix"
+        "fix": "prettier webpack.config.js **/*.js **/*.ts **/*.scss **/*.json **/*.html --write & eslint **/*.js **/*.ts --fix & stylelint **/*.scss --fix"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.18.2",
-        "@types/chrome": "0.0.193",
-        "@types/lodash": "^4.14.182",
-        "@types/node": "^18.0.3",
-        "@types/react": "^18.0.15",
-        "@types/react-dom": "^18.0.6",
-        "@types/socket.io-client": "^3.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.30.5",
-        "@typescript-eslint/parser": "^5.30.5",
-        "app-root-path": "^3.0.0",
+        "@babel/eslint-parser": "^7.23.3",
+        "@types/lodash": "^4.14.202",
+        "@types/node": "^20.10.6",
+        "@types/react": "^18.2.46",
+        "@types/react-dom": "^18.2.18",
+        "@typescript-eslint/eslint-plugin": "^6.17.0",
+        "@typescript-eslint/parser": "^6.17.0",
+        "app-root-path": "^3.1.0",
         "copy-webpack-plugin": "^11.0.0",
-        "css-loader": "^6.7.1",
-        "css-minimizer-webpack-plugin": "^4.0.0",
-        "eslint": "^8.19.0",
+        "css-loader": "^6.8.1",
+        "css-minimizer-webpack-plugin": "^5.0.1",
+        "eslint": "^8.56.0",
         "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-import-resolver-typescript": "^3.2.5",
-        "eslint-plugin-import": "^2.26.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-json": "^3.1.0",
-        "eslint-plugin-jsx-a11y": "^6.6.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-prettier": "^5.1.2",
+        "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "fs-extra": "^10.1.0",
-        "mini-css-extract-plugin": "^2.6.1",
-        "prettier": "^2.7.1",
-        "sass": "^1.53.0",
-        "sass-loader": "^13.0.2",
-        "stylelint": "^14.9.1",
-        "stylelint-config-recommended": "^8.0.0",
-        "stylelint-config-sass-guidelines": "^9.0.1",
-        "stylelint-config-standard": "^26.0.0",
-        "terser-webpack-plugin": "^5.3.3",
-        "ts-loader": "^9.3.1",
-        "typescript": "^4.7.4",
-        "web-ext-types": "^3.2.1",
-        "webpack": "^5.73.0",
-        "webpack-cli": "^4.10.0",
+        "fs-extra": "^11.2.0",
+        "mini-css-extract-plugin": "^2.7.6",
+        "prettier": "^3.1.1",
+        "sass": "^1.69.7",
+        "sass-loader": "^13.3.3",
+        "stylelint": "^16.1.0",
+        "stylelint-config-prettier-scss": "^1.0.0",
+        "stylelint-config-standard-scss": "^13.0.0",
+        "terser-webpack-plugin": "^5.3.10",
+        "ts-loader": "^9.5.1",
+        "typescript": "^5.3.3",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4",
         "webpack-license-plugin": "^4.4.2"
     },
     "dependencies": {
         "@loftyshaky/shared": "1.5.0",
-        "@simonwep/pickr": "^1.8.2",
+        "@simonwep/pickr": "^1.9.0",
+        "@types/webextension-polyfill": "^0.10.7",
         "advanced-extension-reloader-watch-2": "^1.3.1",
         "confusing-browser-globals": "^1.0.11",
         "lodash": "^4.17.21",
-        "mobx": "^6.6.1",
-        "mobx-react": "7.5.2",
+        "mobx": "^6.12.0",
+        "mobx-react": "9.1.0",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "socket.io-client": "^4.5.1",
-        "webextension-polyfill-ts": "^0.26.0"
+        "socket.io-client": "^4.7.3",
+        "webextension-polyfill": "^0.10.0"
     }
 }
